# lumen

./: .gitignore  Cargo.toml  README.md  a.txt  config.toml
.logs/: build.txt
Documentation/: implementation.md
src/: main.rs
src/config/: constants.rs  mod.rs  settings.rs
src/editor/: editorStructure.rs  mod.rs
src/input/: inputHandler.rs  mod.rs
src/ui/: mod.rs
src/utils/: error.rs  fileOps.rs  file_ops.rs  logMacros.rs  log_macros.rs  mod.rs
